--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,13 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: f6445828e4ed4b36bc4b42f658b803aa
       POSTGRES_DB: elcloud_dev
-  
+
   web:
     build:
-      context: ./ElCloud.API
-    command: mix phx.server  
+      context: .
+    command: mix phx.server
     volumes:
-      - ./ElCloud.API/data:/home/app/data
+      - ./data:/home/app/data
     ports:
       - "4000:4000"
     links:
