--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "@types/socket.io-client": "^1.4.35",
-    "milligram": "^1.3.0",
+    "fp-ts": "^2.9.5",
+    "immutable": "^4.0.0-rc.12",
+    "inversify": "^5.0.5",
+    "mobx": "^6.1.5",
+    "mobx-react": "^7.1.0",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
     "react": "^16.7.0",
@@ -25,12 +28,13 @@
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "@types/react-router-dom": "^4.3.1",
+    "@types/socket.io-client": "^1.4.35",
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^0.28.10",
     "mini-css-extract-plugin": "^0.4.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
-    "typescript": "^3.2.2",
+    "typescript": "^4.0.1",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "4.28.4",
     "webpack-cli": "^3.2.1"
