--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "@types/react-dom": "^16.0.11",
     "@types/react-router-dom": "^4.3.1",
     "@types/socket.io-client": "^1.4.35",
-    "babel-loader": "^8.0.0",
+    "awesome-typescript-loader": "^5.2.1",
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^0.28.10",
+    "dotenv": "^8.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "typescript": "^4.0.1",
