--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "fp-ts": "^2.9.5",
     "immutable": "^4.0.0-rc.12",
     "inversify": "^5.0.5",
@@ -13,9 +14,10 @@
     "mobx-react": "^7.1.0",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-router-dom": "^4.3.1"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^4.3.1",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -24,6 +26,7 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
+    "@types/node": "^14.14.25",
     "@types/phoenix": "^1.5.1",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
