--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fp-ts": "^2.9.5",
     "immutable": "^4.0.0-rc.12",
     "inversify": "^5.0.5",
+    "jest": "^26.6.3",
     "mobx": "^6.1.5",
     "mobx-react": "^7.1.0",
     "phoenix": "file:deps/phoenix",
