--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "@types/socket.io-client": "^1.4.35",
-    "milligram": "^1.3.0",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
+    "fp-ts": "^2.9.5",
+    "immutable": "^4.0.0-rc.12",
+    "inversify": "^5.0.5",
+    "jest": "^26.6.3",
+    "mobx": "^6.1.5",
+    "mobx-react": "^7.1.0",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-router-dom": "^4.3.1"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^4.3.1",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -21,16 +29,19 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
+    "@types/node": "^14.14.25",
     "@types/phoenix": "^1.5.1",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "@types/react-router-dom": "^4.3.1",
-    "babel-loader": "^8.0.0",
+    "@types/socket.io-client": "^1.4.35",
+    "awesome-typescript-loader": "^5.2.1",
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^0.28.10",
+    "dotenv": "^8.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
-    "typescript": "^3.2.2",
+    "typescript": "^4.0.1",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "4.28.4",
     "webpack-cli": "^3.2.1"
