--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
   web:
     build:
       context: .
-    command: mix phx.server
+    command: mix start
     volumes:
       - ./data:/home/app/data
     ports:
