--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,48 @@
-name: Main
+name: CI
 
-on: [push]
+on: push
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.8]
+ test:
+   runs-on: ubuntu-latest
+   services:
+     postgres:
+       image: postgres:11
+       env:
+         POSTGRES_USER: postgres
+         POSTGRES_PASSWORD: postgres
+         POSTGRES_DB: my_app_test
+       ports:
+       - 5432:5432
+       options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+   env:
+     MIX_ENV: test
+   steps:
+     - uses: actions/checkout@v2
+     - uses: actions/setup-elixir@v1.0.0
+       with:
+         otp-version: 22.2.6
+         elixir-version: 1.10.1
+     - uses: actions/cache@v1
+       with:
+         path: deps
+         key: ${{ runner.os }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
+         restore-keys: |
+           ${{ runner.os }}-mix-
+     - uses: actions/setup-node@v1
+       with:
+         node-version: '10.x'
+     - uses: nanasess/setup-chromedriver@master
+       with:
+         chromedriver-version: '79.0.3945.36'
+     - run: |
+         export DISPLAY=:99
+         chromedriver --url-base=/wd/hub &
+         sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build docker-compose
-      run: |
-        docker-compose up --build -d
+     - run: mix local.rebar --force
+     - run: mix local.hex --force
+     - run: mix deps.get
+     - run: npm install --prefix assets
+     - run: npm run deploy --prefix assets
+    #  - run: mix test
