--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,4 +45,4 @@ jobs:
      - run: mix deps.get
      - run: npm install --prefix assets
     #  - run: npm run deploy --prefix assets
-    #  - run: mix test
+     - run: mix test
