--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,5 +44,5 @@ jobs:
      - run: mix local.hex --force
      - run: mix deps.get
      - run: npm install --prefix assets
-    #  - run: npm run deploy --prefix assets
+     - run: npm run deploy --prefix assets
      - run: mix test
