--- a/assets/package.json
+++ b/assets/package.json
@@ -15,8 +15,8 @@
     "jest": "^26.6.3",
     "mobx": "^6.1.5",
     "mobx-react": "^7.1.0",
-    "phoenix": "file:deps/phoenix",
-    "phoenix_html": "file:deps/phoenix_html",
+    "phoenix": "file:../deps/phoenix",
+    "phoenix_html": "file:../deps/phoenix_html",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
