--- a/assets/package.json
+++ b/assets/package.json
@@ -2,42 +2,57 @@
   "repository": {},
   "license": "MIT",
   "scripts": {
-    "deploy": "webpack --mode production",
-    "watch": "webpack --mode development --watch"
+    "deploy": "webpack --mode production ---env.NODE_ENV=prod",
+    "watch": "webpack --mode development --watch  --env.NODE_ENV=dev"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
+    "@material-ui/core": "^4.11.1",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.21.1",
-    "fp-ts": "^2.9.5",
+    "fp-ts": "^2.9.3",
     "immutable": "^4.0.0-rc.12",
-    "inversify": "^5.0.5",
-    "jest": "^26.6.3",
-    "mobx": "^6.1.5",
-    "mobx-react": "^7.1.0",
-    "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "reflect-metadata": "^0.1.13"
+    "inversify": "^5.0.1",
+    "mobx": "^6.0.4",
+    "mobx-react": "^7.0.5",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.1.2",
+    "reflect-metadata": "^0.1.13",
+    "typescript": "^4.1.2",
+    "webpack": "^4.42.0"
   },
   "devDependencies": {
-    "@types/node": "^14.14.25",
+    "phoenix": "file:../deps/phoenix",
+    "phoenix_html": "file:../deps/phoenix_html",
     "@types/phoenix": "^1.5.1",
-    "@types/react": "^16.7.18",
-    "@types/react-dom": "^16.0.11",
-    "@types/react-router-dom": "^5.1.7",
     "@types/socket.io-client": "^1.4.35",
+    "@material-ui/types": "^5.1.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^14.14.10",
+    "@types/prettier": "^2.1.5",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.2",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
     "awesome-typescript-loader": "^5.2.1",
-    "copy-webpack-plugin": "^4.5.0",
-    "css-loader": "^0.28.10",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.3.2",
+    "css-loader": "^4.2.2",
     "dotenv": "^8.2.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.0",
-    "typescript": "^4.0.1",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "webpack": "4.28.4",
-    "webpack-cli": "^3.2.1"
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "html-webpack-plugin": "^4.4.1",
+    "mini-css-extract-plugin": "^0.9.0",
+    "openapi-typescript": "^2.4.2",
+    "prettier": "^2.2.1",
+    "style-loader": "^1.2.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
