--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,8 @@ jobs:
        image: postgres:11
        env:
          POSTGRES_USER: postgres
-         POSTGRES_PASSWORD: postgres
-         POSTGRES_DB: my_app_test
+         POSTGRES_PASSWORD: f6445828e4ed4b36bc4b42f658b803aa
+         POSTGRES_DB: elCloud_test
        ports:
        - 5432:5432
        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
