--- a/assets/package.json
+++ b/assets/package.json
@@ -36,6 +36,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.2",
     "@types/react-sortable-tree": "^0.3.12",
+    "@types/react-sortable-tree-theme-file-explorer": "^0.0.0",
     "@types/socket.io-client": "^1.4.35",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
