Add new type of file view (#4)

--- a/assets/package.json
+++ b/assets/package.json
@@ -17,25 +17,27 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.1.2",
+    "react-sortable-tree": "^2.8.0",
+    "react-sortable-tree-theme-file-explorer": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "typescript": "^4.1.2",
     "webpack": "^4.42.0"
   },
   "devDependencies": {
-    "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html",
-    "@types/phoenix": "^1.5.1",
-    "@types/socket.io-client": "^1.4.35",
     "@material-ui/types": "^5.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^25.2.1",
     "@types/node": "^14.14.10",
+    "@types/phoenix": "^1.5.1",
     "@types/prettier": "^2.1.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.2",
+    "@types/react-sortable-tree": "^0.3.12",
+    "@types/react-sortable-tree-theme-file-explorer": "^0.0.0",
+    "@types/socket.io-client": "^1.4.35",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
     "awesome-typescript-loader": "^5.2.1",
@@ -50,6 +52,8 @@
     "html-webpack-plugin": "^4.4.1",
     "mini-css-extract-plugin": "^0.9.0",
     "openapi-typescript": "^2.4.2",
+    "phoenix": "file:../deps/phoenix",
+    "phoenix_html": "file:../deps/phoenix_html",
     "prettier": "^2.2.1",
     "style-loader": "^1.2.1",
     "webpack-cli": "^3.3.12",
