--- a/assets/package.json
+++ b/assets/package.json
@@ -14,6 +14,7 @@
     "inversify": "^5.0.1",
     "mobx": "^6.0.4",
     "mobx-react": "^7.0.5",
+    "path": "^0.12.7",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.1.2",
