--- a/assets/package.json
+++ b/assets/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
+    "@types/throttle-debounce": "^2.1.0",
     "axios": "^0.21.1",
     "fp-ts": "^2.9.3",
     "immutable": "^4.0.0-rc.12",
@@ -21,6 +22,7 @@
     "react-sortable-tree": "^2.8.0",
     "react-sortable-tree-theme-file-explorer": "^2.0.0",
     "reflect-metadata": "^0.1.13",
+    "throttle-debounce": "^3.0.1",
     "typescript": "^4.1.2",
     "webpack": "^4.42.0"
   },
