--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -43,6 +43,9 @@ jobs:
     - name: Output PostgreSQL version
       run: psql --version
 
+    - name: Setup db
+      run: ecto.setup
+
     - name: Install dependencies
       run: mix deps.get
 
