--- a/assets/package.json
+++ b/assets/package.json
@@ -8,18 +8,21 @@
   "dependencies": {
     "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
+    "@types/throttle-debounce": "^2.1.0",
     "axios": "^0.21.1",
     "fp-ts": "^2.9.3",
     "immutable": "^4.0.0-rc.12",
     "inversify": "^5.0.1",
     "mobx": "^6.0.4",
     "mobx-react": "^7.0.5",
+    "path": "^0.12.7",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.1.2",
     "react-sortable-tree": "^2.8.0",
     "react-sortable-tree-theme-file-explorer": "^2.0.0",
     "reflect-metadata": "^0.1.13",
+    "throttle-debounce": "^3.0.1",
     "typescript": "^4.1.2",
     "webpack": "^4.42.0"
   },
