--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -50,8 +50,4 @@ jobs:
       run: mix ecto.setup
 
     - name: Run tests
-      run: |
-        mix ecto.create
-        mix ecto.migrate
-        mix test
-
+      run: mix test
