--- a/assets/package.json
+++ b/assets/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.1.2",
     "react-sortable-tree": "^2.8.0",
     "react-sortable-tree-theme-file-explorer": "^2.0.0",
+    "react-virtualized": "^9.22.3",
     "reflect-metadata": "^0.1.13",
     "throttle-debounce": "^3.0.1",
     "typescript": "^4.1.2",
