Заменил awesome-ts на ts-loader

--- a/assets/package.json
+++ b/assets/package.json
@@ -59,6 +59,7 @@
     "phoenix_html": "file:../deps/phoenix_html",
     "prettier": "^2.2.1",
     "style-loader": "^1.2.1",
+    "ts-loader": "^8.1.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
