--- a/assets/package.json
+++ b/assets/package.json
@@ -2,13 +2,14 @@
   "repository": {},
   "license": "MIT",
   "scripts": {
-    "deploy": "webpack --mode production ---env.NODE_ENV=prod",
-    "watch": "webpack --mode development --watch  --env.NODE_ENV=dev"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
-    "@types/throttle-debounce": "^2.1.0",
     "axios": "^0.21.1",
     "fp-ts": "^2.9.3",
     "immutable": "^4.0.0-rc.12",
@@ -19,13 +20,13 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "^4.0.3",
     "react-sortable-tree": "^2.8.0",
     "react-sortable-tree-theme-file-explorer": "^2.0.0",
     "react-virtualized": "^9.22.3",
     "reflect-metadata": "^0.1.13",
     "throttle-debounce": "^3.0.1",
-    "typescript": "^4.2.3",
-    "webpack": "^4.42.0"
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
     "@material-ui/types": "^5.1.0",
@@ -42,25 +43,30 @@
     "@types/react-sortable-tree": "^0.3.12",
     "@types/react-sortable-tree-theme-file-explorer": "^0.0.0",
     "@types/socket.io-client": "^1.4.35",
+    "@types/throttle-debounce": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.3.2",
     "css-loader": "^4.2.2",
     "dotenv": "^8.2.0",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
-    "html-webpack-plugin": "^4.4.1",
-    "mini-css-extract-plugin": "^0.9.0",
     "openapi-typescript": "^2.4.2",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "prettier": "^2.2.1",
-    "style-loader": "^1.2.1",
-    "ts-loader": "^8.1.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "prettier": "^2.2.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
