--- a/assets/tsconfig.json
+++ b/assets/tsconfig.json
@@ -7,7 +7,7 @@
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": false,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "lib": [
       "dom",
       "es6"
@@ -17,10 +17,9 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": false,
+    "noEmit": true,
     "removeComments": true,
     "sourceMap": true,
-    "baseUrl": "./assets/src",
     "types": [
       "node",
       "reflect-metadata",
@@ -34,10 +33,15 @@
     "strictPropertyInitialization": true,
     "alwaysStrict": true,
     "noImplicitAny": true,
-    "noImplicitThis": true
+    "noImplicitThis": true,
+    "allowJs": true,
+    "noFallthroughCasesInSwitch": true
   },
   "exclude": [
     "node_modules",
     "dist"
+  ],
+  "include": [
+    "src"
   ]
 }
