--- a/assets/package.json
+++ b/assets/package.json
@@ -44,7 +44,6 @@
     "@types/socket.io-client": "^1.4.35",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
-    "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.3.2",
     "css-loader": "^4.2.2",
@@ -60,6 +59,7 @@
     "phoenix_html": "file:../deps/phoenix_html",
     "prettier": "^2.2.1",
     "style-loader": "^1.2.1",
+    "ts-loader": "^8.1.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
