--- a/assets/package.json
+++ b/assets/package.json
@@ -2,7 +2,7 @@
   "repository": {},
   "license": "MIT",
   "scripts": {
-    "deploy": "webpack --mode production ---env.NODE_ENV=prod",
+    "deploy": "webpack --mode production --env.NODE_ENV=prod",
     "watch": "webpack --mode development --watch  --env.NODE_ENV=dev"
   },
   "dependencies": {
@@ -25,7 +25,8 @@
     "reflect-metadata": "^0.1.13",
     "throttle-debounce": "^3.0.1",
     "typescript": "^4.2.3",
-    "webpack": "^4.42.0"
+    "webpack": "^4.42.0",
+    "webpack-cli": "^4.7.0"
   },
   "devDependencies": {
     "@material-ui/types": "^5.1.0",
