--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,8 +10,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Build the docker-compose stack
-      run: docker-compose up --build -d
+    # - name: Build the docker-compose stack
+    #   run: docker-compose up --build -d
     - name: Check running containers
       run: docker ps -a
 
