--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ data
 *.lock
 # The directory Mix downloads your dependencies sources to.
 deps/
+schema.json
 
 # Where 3rd-party dependencies like ExDoc output generated docs.
 /doc/
